--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
     <title>About page after change</title>
 </head>
 <body>
-    <p>New paragraph added to test stash command</p>
+    <p>Checking stash with default name</p>
     <p>Stash basically saves your work somewhere without changing the existing code</p>
 </body>
 </html>
