--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <p>Testing restore</p>
     <p>
-        Another change for new commit
+        Another change for new commit in working
     </p>
 </body>
 </html>
