--- a/Contact.html
+++ b/Contact.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About page after change</title>
+    <title>Contact Page</title>
 </head>
 <body>
-    <p>Testing restore</p>
-    <p>Stash  changing the existing code</p>
-    <b>New button</b>
+    New file added
 </body>
 </html>
