--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Splitmate</title>
 </head>
 <body>
-    
+    <b1>changes in main, check if can be found in branch</b1>
 </body>
 </html>
